--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>THis is paragraph</p>
-    <p>this is new feature (dropdown)</p>
+    <p>this is new feature (dropdown)</p>g
 </body>
 </html>
